# Poppy

./: .gitignore  CMakeLists.txt  Makefile  README.md  dune-project  output  poppy.opam
.circleci/: config.yml
core_lib/: bindings.c  bindings.ll  dune
examples/c/: test.c
examples/java/: linkedList.java
examples/ll/: test.ll
examples/poppy/: BinarySearchTree.poppy  bad_async.poppy  bad_read_region.poppy  borrowing.poppy  capability_annotations.poppy  consume.poppy  (+9 more)
lib/: ast.ml  dune  lexer.mll  parser.mly
lib/data-race-checker/: README.md  aggregate_capability_access.ml  data_race_env.ml  dune  type_alias_liveliness.ml  type_alias_liveliness.mli  type_async_capabilities.ml  type_async_capabilities.mli  type_borrowing.ml  type_borrowing.mli  type_capability_annotations.ml  type_capability_annotations.mli  type_capability_constraints.ml  type_capability_constraints.mli  type_concurrent_capability_access.ml  type_concurrent_capability_access.mli  type_consume.ml  type_consume.mli  type_data_race_async.ml  type_data_race_expr.ml  type_data_race_expr.mli  type_data_race_function.ml  type_data_race_function.mli  type_data_race_method.ml  type_data_race_method.mli  type_data_race_program.ml  type_data_race_program.mli  type_linear_capabilities.ml  type_linear_capabilities.mli  type_read_capabilities.ml  type_read_capabilities.mli  type_subord_capabilities.ml  type_subord_capabilities.mli  update_identifier_capabilities.ml  update_identifier_capabilities.mli
scripts/: install_ci_dependencies.sh  opam_dependencies.txt  run_and_test.sh
test/: dune  test_poppy.ml
(+103 files in other folders)
