(library
 (name data_race_checker)
 (libraries core fmt poppy_parser poppy_type_checker)
 (preprocess (pps ppx_expect ppx_inline_test ppx_jane ppx_let))
 (modules type_data_race_program type_data_race_expr type_read_capabilities
  data_race_env type_data_race_async type_linear_capabilities update_identifier_capabilities
  type_alias_liveliness type_data_race_function type_capability_annotations
  type_borrowing type_capability_constraints))
